# HRDW-ESPDeka_v0.1

./: .cursorrules  .gitignore  CMakeLists.txt  LICENSE  PROJECT_BRIEF.md  README.md  partitions.csv  sdkconfig.defaults
components/bsp/: CMakeLists.txt  bsp_display.c  idf_component.yml
components/bsp/include/: bsp_display.h  bsp_pins.h
components/chat_core/: CMakeLists.txt  chat_core.c
components/chat_core/include/: chat_core.h
components/chat_ui/: CMakeLists.txt  chat_ui.c
components/chat_ui/include/: chat_ui.h
components/expand_io/: CMakeLists.txt  expand_io_hal.c
components/expand_io/include/: expand_io_hal.h  expand_io_pins.h
components/gnss_driver/: CMakeLists.txt  gnss_driver.c
components/gnss_driver/include/: gnss_driver.h
components/lora_driver/: CMakeLists.txt  lora_driver.c
components/lora_driver/include/: lora_driver.h
firmware/lora_coprocessor/: CMakeLists.txt  README.md  activate-idf.ps1  sdkconfig.defaults
firmware/lora_coprocessor/components/board_p3_v16/include/: board_pins.h
firmware/lora_coprocessor/components/lr1121_radio/: CMakeLists.txt  lr1121_radio.c
firmware/lora_coprocessor/components/status_led/: CMakeLists.txt  status_led.c
firmware/lora_coprocessor/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  at_shell.c  at_shell.h  host_uart.c  host_uart.h  idf_component.yml
firmware/lora_meshtastic/: .gitignore  README.md  build.ps1  flash.ps1
firmware/lora_meshtastic/espdeka_p3_v16/: platformio.ini  rfswitch.h  userPrefs.jsonc  variant.cpp  variant.h
main/: CMakeLists.txt  app_main.c
(+2 files in other folders)
